[gd_scene load_steps=7 format=3 uid="uid://gijla7qpihrd"]

[ext_resource type="Script" path="res://Features/Decorating/Placeable.gd" id="1_2s451"]
[ext_resource type="PackedScene" uid="uid://bucygen2ms2dk" path="res://Features/Decorating/placeable_footprint.tscn" id="2_cpgci"]
[ext_resource type="Texture2D" uid="uid://ckx1pnjk8df78" path="res://Images/UI/9slice.png" id="3_vk054"]
[ext_resource type="Theme" uid="uid://5m3hxsr6k2n8" path="res://GameTheme.tres" id="4_njhh3"]
[ext_resource type="Texture2D" uid="uid://bni0j33rsj4lr" path="res://Images/UI/colorbutton.png" id="5_21ao4"]
[ext_resource type="Theme" uid="uid://c35151vsd8jjt" path="res://ColorPickerTheme.tres" id="6_b8183"]

[node name="Placeable" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_2s451")

[node name="PlaceableFootprint" parent="." instance=ExtResource("2_cpgci")]

[node name="SpriteColor" type="Sprite2D" parent="."]

[node name="Extra" type="Sprite2D" parent="SpriteColor"]

[node name="Outline" type="Sprite2D" parent="SpriteColor"]

[node name="GrippyCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(0, -10, 14, 0, 0, 9, -15, 0)

[node name="ControlsPanel" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -186.0
offset_top = -97.0
offset_right = 186.0
offset_bottom = -21.0

[node name="Panel" type="NinePatchRect" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vk054")
patch_margin_left = 20
patch_margin_top = 22
patch_margin_right = 22
patch_margin_bottom = 39

[node name="MarginContainer" type="MarginContainer" parent="ControlsPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_njhh3")
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsPanel/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Confirm" type="Button" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Rotate" type="Button" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Rotate"

[node name="EditColor" type="TextureButton" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("5_21ao4")
stretch_mode = 0

[node name="ColorPickerPopup" type="MarginContainer" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer/EditColor"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -3.0
offset_top = -375.0
offset_right = 328.0
offset_bottom = -31.0

[node name="ColorPickerPanel" type="PanelContainer" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer/EditColor/ColorPickerPopup"]
layout_mode = 2
theme = ExtResource("6_b8183")

[node name="ColorPicker" type="ColorPicker" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer/EditColor/ColorPickerPopup/ColorPickerPanel"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_b8183")
color = Color(0.133333, 0.113725, 0.490196, 1)
edit_alpha = false
picker_shape = 1
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="Delete" type="Button" parent="ControlsPanel/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="Node2D" type="Node2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="placement_eligibility_changed" from="PlaceableFootprint" to="." method="_on_placeable_footprint_placement_eligibility_changed"]
[connection signal="pressed" from="ControlsPanel/Panel/MarginContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="ControlsPanel/Panel/MarginContainer/HBoxContainer/Rotate" to="." method="_on_rotate_pressed"]
[connection signal="pressed" from="ControlsPanel/Panel/MarginContainer/HBoxContainer/EditColor" to="." method="_on_edit_color_pressed"]
[connection signal="color_changed" from="ControlsPanel/Panel/MarginContainer/HBoxContainer/EditColor/ColorPickerPopup/ColorPickerPanel/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="ControlsPanel/Panel/MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]

[editable path="PlaceableFootprint"]
